--- a/backend/v1/gateway-server/src/main/resources/application.yml
+++ b/backend/v1/gateway-server/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 server:
-  port: ${service_port:8080}
+  # local
+#  port: ${service_port:8080}
+  # docker
+  port: ${service_port:80}
 
 spring:
   application:
@@ -17,9 +20,9 @@ eureka:
     fetch-registry: true
     service-url:
     # local
-      defaultZone: http://localhost:8761/eureka
+#      defaultZone: http://localhost:8761/eureka
     # docker
-#      defaultZone: http://eureka-server:8761/eureka
+      defaultZone: http://eureka-server/eureka
   instance:
     instance-id: ${spring.application.name}:${random.value}
 
