--- a/backend/v1/compose/docker-compose.yml
+++ b/backend/v1/compose/docker-compose.yml
@@ -10,6 +10,17 @@ services:
     environment:
       eureka.client.serviceUrl.defaultZone: http://eureka-server/eureka
 
+  gateway-server:
+    image: markhong93/gateway-server
+    networks:
+      - test-net
+    ports:
+      - 8080:80
+    environment:
+      eureka.client.serviceUrl.defaultZone: http://eureka-server/eureka
+    depends_on:
+      - eureka-server
+
   user-server:
     image: markhong93/user-server
     networks:
@@ -19,12 +30,10 @@ services:
     depends_on:
       - eureka-server
 
-  gateway-server:
-    image: markhong93/gateway-server
+  board-server:
+    image: markhong93/board-server
     networks:
       - test-net
-    ports:
-      - 8080:80
     environment:
       eureka.client.serviceUrl.defaultZone: http://eureka-server/eureka
     depends_on:
